force-app/main/default/objects/Case_Payment__c/Case_Payment__c.object-meta.xml
<CustomObject>
    <description>Receipt applied to a Case. May have zero or more Liability Payments and zero or more Judgment Payments.</description>
    <label>Case Payment</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Case Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>