force-app/main/default/objects/Case_Payment__c/fields/Amount_Payable_to_Employees__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable_to_Employees__c</fullName>
    <description>Rolls the amount payable to employees from the related liability payments using dlrs. This is the amount rolled up to the case.</description>
    <label>Amount Payable to Employees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>