force-app/main/default/objects/Case_Payment__c/fields/Amount_Payable_to_State__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable_to_State__c</fullName>
    <description>Rolls up the amount payable to state from related liability payments via dlrs. This amount then rolls to the case.</description>
    <label>Amount Payable to State</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>