force-app/main/default/objects/Case_Payment__c/fields/Case_Assigned_Deputy__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_Deputy__c</fullName>
    <description>Used for populating list views</description>
    <formula>Case__r.Assigned_Deputy__r.Name</formula>
    <inlineHelpText>Deputy assigned to the case</inlineHelpText>
    <label>Case Assigned Deputy</label>
    <type>Text</type>
</CustomField>