force-app/main/default/objects/Case_Payment__c/fields/Case_Payment_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Payment_Posted_Date__c</fullName>
    <description>Populated by ApplyCasePayment.cls</description>
    <inlineHelpText>Date this Case Payment&#39;s allocations to Case Issues or Judgments were Applied (aka Posted).</inlineHelpText>
    <label>Case Payment Posted Date</label>
    <type>Date</type>
</CustomField>