force-app/main/default/objects/Case_Payment__c/fields/CMU_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>CMU_Reimbursement__c</fullName>
    <inlineHelpText>Transmit to DIR</inlineHelpText>
    <label>CMU (Reimbursement)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>