force-app/main/default/objects/Case_Payment__c/fields/CPR_Only__c.field-meta.xml
<CustomField>
    <fullName>CPR_Only__c</fullName>
    <label>CPR Only</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>