force-app/main/default/objects/Case_Payment__c/fields/CPR_Only_Pay_Business__c.field-meta.xml
<CustomField>
    <fullName>CPR_Only_Pay_Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPR Only Pay Business</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Payments</relationshipLabel>
    <relationshipName>Case_Payments_CPR_Only</relationshipName>
    <type>Lookup</type>
</CustomField>