force-app/main/default/objects/Case_Payment__c/fields/CPR_Refund__c.field-meta.xml
<CustomField>
    <fullName>CPR_Refund__c</fullName>
    <label>CPR Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>