force-app/main/default/objects/Case_Payment__c/fields/Date_Funds_Mailed_to_Employee__c.field-meta.xml
<CustomField>
    <fullName>Date_Funds_Mailed_to_Employee__c</fullName>
    <description>Used for WCA payments to define when the employee was mailed the wages they were due.</description>
    <inlineHelpText>Used for WCA payments to define when the employee was mailed the wages they were due</inlineHelpText>
    <label>Date Funds Mailed to Employee</label>
    <type>Date</type>
</CustomField>