force-app/main/default/objects/Case_Payment__c/fields/DIR_Attorney_Fees__c.field-meta.xml
<CustomField>
    <fullName>DIR_Attorney_Fees__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>DIR Attorney Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>