force-app/main/default/objects/Case_Payment__c/fields/DIR_Attorney_Fees_Explanation__c.field-meta.xml
<CustomField>
    <fullName>DIR_Attorney_Fees_Explanation__c</fullName>
    <label>DIR Attorney Fees Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>