force-app/main/default/objects/Case_Payment__c/fields/Hold_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Hold_Explanation__c</fullName>
    <inlineHelpText>For the information of Auditors, continued holding of undisbursed funds is justified for the for the following reasons:</inlineHelpText>
    <label>Hold Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>