force-app/main/default/objects/Case_Payment__c/fields/Hold_For__c.field-meta.xml
<CustomField>
    <fullName>Hold_For__c</fullName>
    <label>Hold For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>for appeal period which ends</fullName>
            </value>
            <value>
                <fullName>(allow for date that would result in task to disbursing clerk)</fullName>
            </value>
            <value>
                <fullName>for Release</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>