force-app/main/default/objects/Case_Payment__c/fields/Hold_For_Other__c.field-meta.xml
<CustomField>
    <fullName>Hold_For_Other__c</fullName>
    <inlineHelpText>If Hold for is &quot;other,&quot; indicate the reason for the hold here.</inlineHelpText>
    <label>Hold For - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>