force-app/main/default/objects/Case_Payment__c/fields/Hold_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Review_Date__c</fullName>
    <description>Req 50499. What? You don&#39;t have the original, outdated BRD memorized?</description>
    <label>Hold Review Date</label>
    <type>Date</type>
</CustomField>