force-app/main/default/objects/Case_Payment__c/fields/Oracle_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Case_Number__c</fullName>
    <formula>Case__r.Oracle_Case_Number__c</formula>
    <label>Oracle Case Number</label>
    <type>Text</type>
</CustomField>