force-app/main/default/objects/Case_Payment__c/fields/Oracle_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Receipt_Number__c</fullName>
    <formula>Receipt__r.Oracle_Receipt_Number__c</formula>
    <label>Oracle Receipt Number</label>
    <type>Text</type>
</CustomField>