force-app/main/default/objects/Case_Payment__c/fields/Other_Refund__c.field-meta.xml
<CustomField>
    <fullName>Other_Refund__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Other/Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>