force-app/main/default/objects/Case_Payment__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+Receipt__r.Payee__r.Id,Receipt__r.Payee__r.Name)</formula>
    <label>Payee</label>
    <type>Text</type>
</CustomField>