force-app/main/default/objects/Case_Payment__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>The Payment Plan must be one of the Payment Plans on the Case.</errorMessage>
        <filterItems>
            <field>Payment_Plan__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>Case Payments</relationshipLabel>
    <relationshipName>Case_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>