force-app/main/default/objects/Case_Payment__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Payment</fullName>
            </value>
            <value>
                <fullName>Full Payment per Settlement</fullName>
            </value>
            <value>
                <fullName>Partial Payment per Settlement</fullName>
            </value>
            <value>
                <fullName>Full Payment Pursuant to the ODA</fullName>
            </value>
            <value>
                <fullName>Employer Concedes Amount</fullName>
            </value>
            <value>
                <fullName>Employer Concedes-Restrictive Endorsement</fullName>
            </value>
            <value>
                <fullName>Employer Correspondence</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>