force-app/main/default/objects/Case_Payment__c/fields/Payment_Terms_Other__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Other__c</fullName>
    <label>Payment Terms - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>