force-app/main/default/objects/Case_Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <formula>TEXT(Receipt__r.Payment_Type__c)</formula>
    <label>Payment Type</label>
    <type>Text</type>
</CustomField>