force-app/main/default/objects/Case_Payment__c/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Receipt__r.Payor__r.Id, IF(ISBLANK(Receipt__r.Payor__r.Name), Receipt__r.Payor__r.FirstName &amp; &quot; &quot; &amp; Receipt__r.Payor__r.LastName, Receipt__r.Payor__r.Name))</formula>
    <label>Payor</label>
    <type>Text</type>
</CustomField>