force-app/main/default/objects/Case_Payment__c/fields/Public_Works_Penalties__c.field-meta.xml
<CustomField>
    <fullName>Public_Works_Penalties__c</fullName>
    <description>Information collected at the time payment is made. Collected on payment vfp</description>
    <label>Public Works Penalties</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>