force-app/main/default/objects/Case_Payment__c/fields/Receipt_Date_after_ODA__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date_after_ODA__c</fullName>
    <formula>IF(NOT(ISNULL(Case__r.ODA_Decision_Date__c))&amp;&amp;(Case__r.ODA_Decision_Date__c&lt; DATEVALUE(Receipt__r.CreatedDate)),TRUE,FALSE)</formula>
    <label>Receipt Date after ODA</label>
    <type>Checkbox</type>
</CustomField>