force-app/main/default/objects/Case_Payment__c/fields/Receipt_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Hold_Date__c</fullName>
    <formula>Receipt__r.Hold_Date__c</formula>
    <label>Receipt Hold Date</label>
    <type>Date</type>
</CustomField>