force-app/main/default/objects/Case_Payment__c/fields/Restitution_Fund__c.field-meta.xml
<CustomField>
    <fullName>Restitution_Fund__c</fullName>
    <label>Restitution Fund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garment Fund</fullName>
            </value>
            <value>
                <fullName>Farmworker Fund</fullName>
            </value>
            <value>
                <fullName>Car Wash Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>