force-app/main/default/objects/Case_Payment__c/fields/Returned_Voided_Case_Payment__c.field-meta.xml
<CustomField>
    <fullName>Returned_Voided_Case_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the returned or voided Case Payment that this Case Payment replaces.</inlineHelpText>
    <label>Returned/Voided Case Payment</label>
    <referenceTo>Case_Payment__c</referenceTo>
    <relationshipLabel>Returned/Voided By</relationshipLabel>
    <relationshipName>Replacement_Case_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>