force-app/main/default/objects/Case_Payment__c/fields/Reversal__c.field-meta.xml
<CustomField>
    <fullName>Reversal__c</fullName>
    <formula>Receipt__r.Reversal__c</formula>
    <label>Reversal</label>
    <type>Checkbox</type>
</CustomField>