force-app/main/default/objects/Case_Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Allocations Recommended</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>ITEM insert</fullName>
                <isActive>false</isActive>
                <label>ITEM insert</label>
            </value>
            <value>
                <fullName>same</fullName>
                <isActive>false</isActive>
                <label>same</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>