force-app/main/default/objects/Case_Payment__c/fields/Transmittal__c.field-meta.xml
<CustomField>
    <fullName>Transmittal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The transmittal that this check is a part of. Set via batch apex that runs nightly to collect all payments generated since the last transmittal into a new transmittal.</description>
    <inlineHelpText>The transmittal this payment is a part of.</inlineHelpText>
    <label>Transmittal</label>
    <referenceTo>Transmittal__c</referenceTo>
    <relationshipLabel>Case Payments</relationshipLabel>
    <relationshipName>Case_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>