force-app/main/default/objects/Case_Payment__c/fields/Transmittal_Unit__c.field-meta.xml
<CustomField>
    <fullName>Transmittal_Unit__c</fullName>
    <formula>TEXT(Receipt__r.Office_Unit__c)</formula>
    <inlineHelpText>aka &quot;Office Unit&quot;</inlineHelpText>
    <label>Transmittal Unit</label>
    <type>Text</type>
</CustomField>