force-app/main/default/objects/Case_Payment__c/fields/Voided_Item__c.field-meta.xml
<CustomField>
    <fullName>Voided_Item__c</fullName>
    <formula>Receipt__r.Voided_Item__c</formula>
    <inlineHelpText>This CP is void because it&#39;s parent RCT is void</inlineHelpText>
    <label>Voided Item</label>
    <type>Checkbox</type>
</CustomField>