force-app/main/default/objects/Case_Payment__c/recordTypes/BOFE.recordType-meta.xml
<RecordType>
    <fullName>BOFE</fullName>
    <active>true</active>
    <description>BOFE Case Payments</description>
    <label>BOFE</label>
</RecordType>