force-app/main/default/objects/Case_Payment__c/recordTypes/WCA.recordType-meta.xml
<RecordType>
    <fullName>WCA</fullName>
    <active>true</active>
    <description>Payments against WCA case issues</description>
    <label>WCA</label>
</RecordType>