force-app/main/default/objects/Case_Payment__c/validationRules/HoldAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>HoldAmount</fullName>
    <active>true</active>
    <description>Hold Review Date and Hold Explanation are required when a Hold amount is entered.</description>
    <errorConditionFormula>AND( 
Hold_Amount__c &gt; 0, 
OR( 
ISBLANK( Hold_Explanation__c ), 
ISBLANK(Hold_Review_Date__c ) 
) 
)</errorConditionFormula>
    <errorMessage>Hold Review Date and Hold Explanation are required when a Hold amount is entered</errorMessage>
</ValidationRule>