force-app/main/default/objects/Case_Payment__c/listViews/Allocations_Recommended.listView-meta.xml
<ListView>
    <fullName>Allocations_Recommended</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Allocations Recommended</value>
    </filters>
    <label>Allocations recommended</label>
</ListView>