force-app/main/default/objects/Case_Payment__c/listViews/Allocations_recommended_WCA.listView-meta.xml
<ListView>
    <fullName>Allocations_recommended_WCA</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Allocations Recommended</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case_Payment__c.WCA,Case_Payment__c.BOFE</value>
    </filters>
    <label>Allocations recommended WCA</label>
</ListView>